syntax = "proto3";

package acme;

import "google/protobuf/timestamp.proto";

message BigInt {
  bytes bytes = 1;
}

message BlockMeta {
  string id = 1;
  string parentHash = 2;
  string uncleHash = 3;
  uint64 nonce = 4;
  bytes receipt_root = 5;
  uint64 number = 6;
  uint64 gasLimit = 7;
  uint64 gasUsed = 8;
  google.protobuf.Timestamp timestamp = 9;
  uint64 size = 10;
  string hash = 11;
}

// ## Transaction List ##
message TransactionList {
  repeated Transaction transaction_details_list = 1;
}

// ## Transaction Details ##
message Transaction {
  string id = 1;
  string status = 2;
  uint64 gasUsed = 3;
  uint64 gasLimit = 4;
  uint64 nonce = 5;
  string to = 6;
  string from = 7;
  // string maxFeePerGas = 8;
  // string maxPriorityFeePerGas = 9;
  uint32 index = 8;
  // string value = 11;
  uint64 blockNumber = 9;
  int64 timestamp = 10;
}

// ## Contracts List ##
message ContractList {
  repeated Contract contract_list = 1;
}

// ## Contract ##
message Contract {
  string address = 1;
  string owner = 2;
  string transactionHash =3;
  int64 timestamp = 4;
  uint64 blockNumber = 6;
}

